--- a/area-model-introduction_a11y_view.html
+++ b/area-model-introduction_a11y_view.html
@@ -124,7 +124,7 @@
     <div class="left">
       <h3>A11y View: Area Model Introduction</h3>
       <div class="aspect-ratio">
-        <iframe id="iframe" allowfullscreen title="Interact with Area Model Introduction"></iframe>
+        <iframe id="iframe" allowfullscreen scrolling="no" title="Interact with Area Model Introduction"></iframe>
       </div>
       <div id="alerts">
         <h4>Activity log - The most recent interactive alerts.</h4>
