--- a/area-model-introduction_en.html
+++ b/area-model-introduction_en.html
@@ -51,7 +51,9 @@
 
     if ( brand === 'phet-io' ) {
       preloads = preloads.concat( [
-        '../phet-io/js/phet-io-initialize-globals.js'
+        '../phet-io/js/phet-io-initialize-globals.js',
+        '../area-model-introduction/js/phet-io/area-model-introduction-phet-io-elements-baseline.js',
+        '../area-model-introduction/js/phet-io/area-model-introduction-phet-io-elements-overrides.js'
       ] );
     }
 
