Validate that types and type metadata are identical, grunt update all repos, see https://github.com/phetsims/phet-io/issues/1515

--- a/area-model-introduction_en.html
+++ b/area-model-introduction_en.html
@@ -52,7 +52,8 @@
     preloads = preloads.concat( [
       '../phet-io/js/phet-io-initialize-globals.js',
       '../area-model-introduction/js/phet-io/area-model-introduction-phet-io-elements-baseline.js',
-      '../area-model-introduction/js/phet-io/area-model-introduction-phet-io-elements-overrides.js'
+      '../area-model-introduction/js/phet-io/area-model-introduction-phet-io-elements-overrides.js',
+      '../area-model-introduction/js/phet-io/area-model-introduction-phet-io-types.js'
     ] );
   }
 
