--- a/area-model-introduction_en.html
+++ b/area-model-introduction_en.html
@@ -44,7 +44,7 @@
           "phet",
           "adapted-from-phet"
         ],
-        "accessible": true,
+        "supportsInteractiveDescriptions": true,
         "simulation": true
       },
       "eslintConfig": {
