--- a/area-model-introduction_en.html
+++ b/area-model-introduction_en.html
@@ -110,6 +110,7 @@
 
   if ( brand === 'phet-io' ) {
     preloads = preloads.concat( [
+      '../chipper/js/phet-io/phetioCompareAPIs.js',
       '../phet-io/js/phet-io-initialize-globals.js',
       '../area-model-introduction/js/area-model-introduction-phet-io-overrides.js'
     ] );
