add "supportsDynamicLocale": true to sims that support it but didn't have it, https://github.com/phetsims/joist/issues/1005

--- a/area-model-introduction_en.html
+++ b/area-model-introduction_en.html
@@ -39,6 +39,9 @@
           "twixt",
           "vegas"
         ],
+        "simFeatures": {
+          "supportsDynamicLocale": true
+        },
         "runnable": true,
         "supportedBrands": [
           "phet",
